fixing overflow not working on mobile chrome

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ body, label, button, a, input, textarea{
 }
 
 
-.header-menu-button[aria-expanded="true"] .header-ham-middle::before{
+.header-menu-button[nav-expanded="true"] .header-ham-middle::before{
     top: 0;
     width: var(--ham-width);
     rotate: 45deg;
@@ -201,11 +201,11 @@ body, label, button, a, input, textarea{
     background-color var(--transition) 350ms;
 }
 
-.header-menu-button[aria-expanded="true"] .header-ham-middle{
+.header-menu-button[nav-expanded="true"] .header-ham-middle{
     width: 0;
 }
 
-.header-menu-button[aria-expanded="true"] .header-ham-middle::after{
+.header-menu-button[nav-expanded="true"] .header-ham-middle::after{
     bottom: 0;
     width: var(--ham-width);
     rotate: -45deg;
@@ -784,8 +784,8 @@ footer a{
 /* mobile view */
 @media only screen and (max-width: 850px){
     
-    html body[aria-expanded="true"],
-    body[aria-expanded="true"]{
+    html[nav-expanded="true"],
+    body[nav-expanded="true"]{
         overflow: hidden !important;
     }   
 
@@ -822,12 +822,12 @@ footer a{
         transform: translateX(0%);
     }
     
-    #home[aria-expanded="true"]{
+    #home[nav-expanded="true"]{
         filter: blur(5px);
         transition: var(--transition);
     }
 
-    footer[aria-expanded="true"]{
+    footer[nav-expanded="true"]{
         filter: blur(5px);
         transition: var(--transition);
     }
